--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="keywords" content="news, highlights, updates, mpasho, trending, latest, trend, sports, business">
+  <meta name="keywords" content="donate, donation, give, hope, help, funding, funds, support, raise, holdhand, together">
   <!-- SEO pack starter -->
   <meta name="description" content="This is a news app where updates are delivered to you right as they happen.">
-  <meta name="author" content="Victor Shaviya">
+  <meta name="author" content="Victor Shaviya, Grp 12">
   <!-- Compromising the UX with this reload meta but I think it will do well for a news app -->
   <meta http-equiv="refresh" content="500">  
   <title>Dona</title>
@@ -31,6 +31,6 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <!-- Start of custom scripts -->   
-   
+
 </body>
 </html>
