Add section1 text content

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="./styles.css" type="text/css">
 </head>
-<body class="mat-typography">
+<body>
 
   <app-root></app-root>
 
